@@ -18,11 +18,16 @@
  */
 package org.apache.pulsar.broker.authorization;
 
+import static java.util.concurrent.TimeUnit.SECONDS;
+import java.util.Set;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutionException;
+import javax.ws.rs.core.Response;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.pulsar.broker.PulsarServerException;
 import org.apache.pulsar.broker.ServiceConfiguration;
 import org.apache.pulsar.broker.authentication.AuthenticationDataSource;
-import org.apache.pulsar.broker.cache.ConfigurationCacheService;
+import org.apache.pulsar.broker.resources.PulsarResources;
 import org.apache.pulsar.common.naming.NamespaceName;
 import org.apache.pulsar.common.naming.TopicName;
 import org.apache.pulsar.common.policies.data.AuthAction;
@@ -30,20 +35,12 @@ import org.apache.pulsar.common.policies.data.NamespaceOperation;
 import org.apache.pulsar.common.policies.data.PolicyName;
 import org.apache.pulsar.common.policies.data.PolicyOperation;
 import org.apache.pulsar.common.policies.data.TenantInfo;
-import org.apache.pulsar.common.policies.data.TenantInfoImpl;
 import org.apache.pulsar.common.policies.data.TenantOperation;
 import org.apache.pulsar.common.policies.data.TopicOperation;
 import org.apache.pulsar.common.util.FutureUtil;
 import org.apache.pulsar.common.util.RestException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import javax.ws.rs.core.Response;
-import java.util.Set;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ExecutionException;
-
-import static java.util.concurrent.TimeUnit.SECONDS;
 
 /**
  * Authorization service that manages pluggable authorization provider and authorize requests accordingly.
@@ -55,14 +52,15 @@ public class AuthorizationService {
     private AuthorizationProvider provider;
     private final ServiceConfiguration conf;
 
-    public AuthorizationService(ServiceConfiguration conf, ConfigurationCacheService configCache)
+    public AuthorizationService(ServiceConfiguration conf, PulsarResources pulsarResources)
             throws PulsarServerException {
         this.conf = conf;
         try {
             final String providerClassname = conf.getAuthorizationProvider();
             if (StringUtils.isNotBlank(providerClassname)) {
-                provider = (AuthorizationProvider) Class.forName(providerClassname).newInstance();
-                provider.initialize(conf, configCache);
+                provider = (AuthorizationProvider) Class.forName(providerClassname)
+                        .getDeclaredConstructor().newInstance();
+                provider.initialize(conf, pulsarResources);
                 log.info("{} has been loaded.", providerClassname);
             } else {
                 throw new PulsarServerException("No authorization providers are present.");
@@ -91,7 +89,7 @@ public class AuthorizationService {
 
     /**
      *
-     * Grant authorization-action permission on a namespace to the given client
+     * Grant authorization-action permission on a namespace to the given client.
      *
      * @param namespace
      * @param actions
@@ -114,7 +112,7 @@ public class AuthorizationService {
     }
 
     /**
-     * Grant permission to roles that can access subscription-admin api
+     * Grant permission to roles that can access subscription-admin api.
      *
      * @param namespace
      * @param subscriptionName
@@ -133,7 +131,7 @@ public class AuthorizationService {
     }
 
     /**
-     * Revoke subscription admin-api access for a role
+     * Revoke subscription admin-api access for a role.
      *
      * @param namespace
      * @param subscriptionName
@@ -149,7 +147,7 @@ public class AuthorizationService {
     }
 
     /**
-     * Grant authorization-action permission on a topic to the given client
+     * Grant authorization-action permission on a topic to the given client.
      *
      * @param topicname
      * @param role
@@ -206,7 +204,8 @@ public class AuthorizationService {
      *            the subscription name defined by the client
      */
     public CompletableFuture<Boolean> canConsumeAsync(TopicName topicName, String role,
-                                                      AuthenticationDataSource authenticationData, String subscription) {
+                                                      AuthenticationDataSource authenticationData,
+                                                      String subscription) {
         if (!this.conf.isAuthorizationEnabled()) {
             return CompletableFuture.completedFuture(true);
         }
@@ -292,40 +291,19 @@ public class AuthorizationService {
      */
     public CompletableFuture<Boolean> canLookupAsync(TopicName topicName, String role,
                                                      AuthenticationDataSource authenticationData) {
-        CompletableFuture<Boolean> finalResult = new CompletableFuture<Boolean>();
-        canProduceAsync(topicName, role, authenticationData).whenComplete((produceAuthorized, ex) -> {
-            if (ex == null) {
-                if (produceAuthorized) {
-                    finalResult.complete(produceAuthorized);
-                    return;
-                }
-            } else {
-                if (log.isDebugEnabled()) {
-                    log.debug(
-                            "Topic [{}] Role [{}] exception occurred while trying to check Produce permissions. {}",
-                            topicName.toString(), role, ex.getMessage());
-                }
-            }
-            canConsumeAsync(topicName, role, authenticationData, null).whenComplete((consumeAuthorized, e) -> {
-                if (e == null) {
-                    if (consumeAuthorized) {
-                        finalResult.complete(consumeAuthorized);
-                        return;
-                    }
+        if (!this.conf.isAuthorizationEnabled()) {
+            return CompletableFuture.completedFuture(true);
+        }
+        if (provider != null) {
+            return provider.isSuperUser(role, authenticationData, conf).thenComposeAsync(isSuperUser -> {
+                if (isSuperUser) {
+                    return CompletableFuture.completedFuture(true);
                 } else {
-                    if (log.isDebugEnabled()) {
-                        log.debug(
-                                "Topic [{}] Role [{}] exception occurred while trying to check Consume permissions. {}",
-                                topicName.toString(), role, e.getMessage());
-
-                    }
-                    finalResult.completeExceptionally(e);
-                    return;
+                    return provider.canLookupAsync(topicName, role, authenticationData);
                 }
-                finalResult.complete(false);
             });
-        });
-        return finalResult;
+        }
+        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured"));
     }
 
     public CompletableFuture<Boolean> allowFunctionOpsAsync(NamespaceName namespaceName, String role,
@@ -349,7 +327,8 @@ public class AuthorizationService {
             // Request has come from a proxy
             if (StringUtils.isBlank(originalPrincipal)) {
                 log.warn("Original principal empty in request authenticated as {}", authenticatedPrincipal);
-                throw new RestException(Response.Status.UNAUTHORIZED, "Original principal cannot be empty if the request is via proxy.");
+                throw new RestException(Response.Status.UNAUTHORIZED, "Original principal cannot be empty if the "
+                        + "request is via proxy.");
             }
             if (proxyRoles.contains(originalPrincipal)) {
                 log.warn("Original principal {} cannot be a proxy role ({})", originalPrincipal, proxyRoles);
@@ -363,7 +342,7 @@ public class AuthorizationService {
     }
 
     /**
-     * Grant authorization-action permission on a tenant to the given client
+     * Grant authorization-action permission on a tenant to the given client.
      *
      * @param tenantName tenant name
      * @param operation tenant operation
@@ -386,8 +365,8 @@ public class AuthorizationService {
             return provider.allowTenantOperationAsync(tenantName, role, operation, authData);
         }
 
-        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured for " +
-                "allowTenantOperationAsync"));
+        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured for "
+                + "allowTenantOperationAsync"));
     }
 
     public CompletableFuture<Boolean> allowTenantOperationAsync(String tenantName,
@@ -424,7 +403,7 @@ public class AuthorizationService {
     }
 
     /**
-     * Grant authorization-action permission on a namespace to the given client
+     * Grant authorization-action permission on a namespace to the given client.
      *
      * @param namespaceName
      * @param operation
@@ -447,8 +426,8 @@ public class AuthorizationService {
             return provider.allowNamespaceOperationAsync(namespaceName, role, operation, authData);
         }
 
-        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured for " +
-                "allowNamespaceOperationAsync"));
+        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured for "
+                + "allowNamespaceOperationAsync"));
     }
 
     public CompletableFuture<Boolean> allowNamespaceOperationAsync(NamespaceName namespaceName,
@@ -485,7 +464,7 @@ public class AuthorizationService {
     }
 
     /**
-     * Grant authorization-action permission on a namespace to the given client
+     * Grant authorization-action permission on a namespace to the given client.
      *
      * @param namespaceName
      * @param operation
@@ -509,8 +488,8 @@ public class AuthorizationService {
             return provider.allowNamespacePolicyOperationAsync(namespaceName, policy, operation, role, authData);
         }
 
-        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured for " +
-                "allowNamespacePolicyOperationAsync"));
+        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured for "
+                + "allowNamespacePolicyOperationAsync"));
     }
 
     public CompletableFuture<Boolean> allowNamespacePolicyOperationAsync(NamespaceName namespaceName,
@@ -549,7 +528,7 @@ public class AuthorizationService {
     }
 
     /**
-     * Grant authorization-action permission on a topic to the given client
+     * Grant authorization-action permission on a topic to the given client.
      *
      * @param topicName
      * @param policy
@@ -571,8 +550,8 @@ public class AuthorizationService {
             return provider.allowTopicPolicyOperationAsync(topicName, role, policy, operation, authData);
         }
 
-        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured for " +
-                "allowTopicPolicyOperationAsync"));
+        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured for "
+                + "allowTopicPolicyOperationAsync"));
     }
 
     public CompletableFuture<Boolean> allowTopicPolicyOperationAsync(TopicName topicName,
@@ -613,7 +592,7 @@ public class AuthorizationService {
     }
 
     /**
-     * Grant authorization-action permission on a topic to the given client
+     * Grant authorization-action permission on a topic to the given client.
      *
      * @param topicName
      * @param operation
@@ -660,8 +639,8 @@ public class AuthorizationService {
             }
         }
 
-        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured for " +
-                "allowTopicOperationAsync"));
+        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured for "
+                + "allowTopicOperationAsync"));
     }
 
     public CompletableFuture<Boolean> allowTopicOperationAsync(TopicName topicName,
